# aws-clientvpn-ip-checker

./: Cargo.toml  LICENSE  README.md
src/: main.rs
