[package]
name = "client_vpn_country_restrict"
version = "0.1.0"
edition = "2021"


[dependencies]
aws_lambda_events = { version = "0.15.0",default-features = false, features = ["cloudwatch_logs","clientvpn","sns"] }
lambda_runtime = "0.10.0"
tokio = { version = "1", features = ["macros"] }
serde = "1.0.136"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "0.10.35", features = ["vendored"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4.2"

